🕵️ feat(kitchen-sink): add Request Inspection API
